# analyzer_service

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/routes/: api.py  qr_analysis.py  redaction.py  scam_analysis.py
app/core/: config.py  messages.py
app/models/: qr_analysis.py  redaction.py  scam_analysis.py
app/services/: qr_analysis.py  redaction.py  scam_analysis.py
tests/: test_config_and_errors.py
