[project]
requires-python = ">=3.9"
name = "analyzer_service"
version = "0.1.0"
description = "A service that exposes API for the PII redaction and website contents analysis"
authors = [
    { name = "Denys Deibuk", email = "deibukdenys@gmail.com" },
]
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn==0.23.2",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "black>=24.3",
    "autopep8>=2.0.0",
    "ipdb>=0.13.0",
    "pylint>=3.0.0"
]
aws = [
    "mangum>=0.17.0"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
